--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
       <ul id="games-today-list" class="games-list"></ul>
       
       <div class="homerun-link-wrapper">
-        <a href="https://tjmx1-hr-edqh.onrender.com/ran_final.html" target="_blank" class="homerun-button">
+        <a href="https://tjmx-2-hr.onrender.com" target="_blank" class="homerun-button">
           💣 RANKING JONRONES
         </a>
       </div>
