--- a/templates/index.html
+++ b/templates/index.html
@@ -40,8 +40,8 @@
       <ul id="games-today-list" class="games-list"></ul>
       
       <div class="homerun-link-wrapper">
-        <a href="https://tjmx-2-hr.onrender.com" target="_blank" class="homerun-button">
-          💣 RANKING JONRONES
+        <a href="https://tjmx-2.onrender.com/" target="_blank" class="homerun-button">
+          ---
         </a>
       </div>
     </section>
